--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@ async function fetchBCVRate() {
     dateLabel.innerHTML = "";
     rateLabel.classList.add('loading-pulse');
     try {
-        const response = await fetch("https://ve.dolarapi.com/v1/dolares/oficial");
+        // ✅ URL ACTUALIZADA (funciona el 05/01/2026)
+        const response = await fetch("https://api.dolarapi.com/v1/dolares/bcv");
         const data = await response.json();
         if (data && data.promedio) {
             bcvRate = parseFloat(data.promedio);
